# AQuA_CPP

./: CMakeLists.txt  README.md
fftw3.3.5-64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
src/: actRun.h  comparison.cpp  draft.cpp  draft.h  draft1.cpp  draft2.cpp  draft3.cpp  draft4.cpp  evtRun.h  feaRun.h  getappdata.h  main.cpp  phaseRun.h  preProcessRun.h  test.cpp
src/actRun/: actRun.cpp  actRun.h
src/data/: data.cpp  data.h
src/flow/: flow.cpp  flow.h  flowMethods.h
src/phaseRun/: phaseRun.cpp  phaseRun.h
src/preProcess/: baselineRemoveAndNoiseEstimation.cpp  baselineRemoveAndNoiseEstimation.h  preProcessRun.cpp  preProcessRun.h  regCrossCorrelation.cpp  regCrossCorrelation.h
src/preProcessRun/: baselineRemoveAndNoiseEstimation.cpp  baselineRemoveAndNoiseEstimation.h  preProcessRun.cpp  preProcessRun.h  regCrossCorrelation.cpp  regCrossCorrelation.h
